# PKT-Voter

./: Cargo.toml  README.md  build.rs
.github/workflows/: build_and_release.yml  build_linux_amd64.yml  build_mac_aarch64.yml  build_mac_amd64.yml  build_windows_amd64.yml
src/: address.rs  difficulty.rs  explorer.rs  main.rs  packetcrypt.rs  types.rs
ui/: confirm.slint  form.slint  main.slint  sending.slint
