[package]
name = "pkt-voter"
version = "0.1.0"
authors = ["cjd@cjdns.fr"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
bitcoin = "0.31.1"
anyhow = "1.0"
reqwest = "0.11.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["macros","rt-multi-thread"] }
miniscript = "11.0.0"
hex = "0.4.3"
num-bigint = "0.4.4"
num-rational = "0.4.1"
num-traits = "0.2.18"
base64 = "0.21.7"

[build-dependencies]
slint-build = "1.4"
